--- a/src/styles/report-set.css
+++ b/src/styles/report-set.css
@@ -12,6 +12,15 @@ button {
     border:none;
 }
 
+.report-data {
+    background-color: #7261A3;
+    border-radius: 3px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 2%;
+}
+
 .accordion-set {
     background-color: transparent;
 }
