Switching up the colors

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
-    background-color: #A67DB8;
-    color: white;
+    background-color: white;
+    color: #342A21;
 }
 
 .accordion-set {
