--- a/src/styles/report-set.css
+++ b/src/styles/report-set.css
@@ -13,7 +13,7 @@ button {
 }
 
 .report-data {
-    background-color: #7261A3;
+    background-color: #FF570A;
     border-radius: 3px;
     width: 90%;
     margin-left: auto;
