--- a/src/styles/report-set.css
+++ b/src/styles/report-set.css
@@ -12,10 +12,6 @@ button {
     border:none;
 }
 
-section {
-    height: 100%;
-}
-
 .report-data {
     color: #FF570A;
     background-color: white;
@@ -28,10 +24,10 @@ section {
 }
 
 img {
-    width: 50%;
+    width: 450px;
     display:block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 25%;
+    margin-right: 40%;
 }
 
 .grid-container {
