--- a/src/styles/report-set.css
+++ b/src/styles/report-set.css
@@ -16,7 +16,7 @@ button {
     color: #FF570A;
     background-color: white;
     border-radius: 3px;
-    width: 90%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
@@ -47,6 +47,11 @@ img {
 }
 
 .advice-paragraph {
+    text-align: center;
+    font-size: 3em;
+}
+
+.level {
     text-align: center;
     font-size: 3em;
 }
