Added random images, login/logout pages, and UI updates

--- a/src/styles/login-button.css
+++ b/src/styles/login-button.css
@@ -5,9 +5,12 @@
     display: block;
     position: relative;
     top: 25px;
-    font-size: 2em;
+    font-size: 3em;
     margin-left: 10%;
     margin-right: 10%;
+    background-color: purple;
+    color: white;
+
 }
 
 .login-button:hover {
